--- a/locales/zh-CN/battle.yaml
+++ b/locales/zh-CN/battle.yaml
@@ -15,3 +15,29 @@ surrender-confirm-title: 确认投降
 surrender-confirm-message: 确定要投降吗？投降后将直接结束战斗。
 surrender-confirm-button: 投降
 cancel: 取消
+
+# 属性翻译
+element:
+  Normal: 普通
+  Grass: 草
+  Water: 水
+  Fire: 火
+  Wind: 风
+  Bug: 虫
+  Flying: 飞行
+  Electric: 电
+  Ground: 地面
+  Ice: 冰
+  Psychic: 超能
+  Fighting: 战斗
+  Trait: 特质
+  Light: 光
+  Mystery: 神秘
+  Shadow: 暗影
+  Dragon: 龙
+  Desert: 沙漠
+  Ancient: 上古
+  Divine: 神遁
+  Miracle: 神迹
+  Holy: 圣灵
+  ElfKing: 精灵王
