--- a/locales/zh-CN/battle.yaml
+++ b/locales/zh-CN/battle.yaml
@@ -15,6 +15,8 @@ surrender-confirm-title: 确认投降
 surrender-confirm-message: 确定要投降吗？投降后将直接结束战斗。
 surrender-confirm-button: 投降
 cancel: 取消
+waiting-for-opponent-title: 等待对手操作
+waiting-for-opponent-message: 等待对手操作中...
 
 # 属性翻译
 element:
