--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -241,3 +241,9 @@ pet_feiya:
 pet_feiyasi:
   name: 菲亚斯
   description: 在沉眠了漫长岁月后 它衍变成了菲亚斯——拥有苍穹般强大羽翼的超强精灵！
+pet_ailu:
+  name: 埃鲁
+  description: 若说星球上还有一种精灵能够印射出地沙合体的古老的历史 就是埃鲁了
+pet_ailudake:
+  name: 埃鲁达克
+  description: 埃鲁达克守护着纠结之藤 然而负面的力量还没有放弃分裂这位传奇的守护者
