--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -110,3 +110,6 @@ mark_emblem_renzhe:
 mark_emblem_fenshen:
   name: 分身
   description: 使分身术无视Miss使自身获得分身幻影
+mark_emblem_lianfang:
+  name: 联防
+  description: 自身替换上场时下一次受到的伤害减少25% 队友替换自身时受到伤害减少15%
