balance: Update 龙鳞甲 effect to reflect only special damage

--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -552,4 +552,4 @@ mark_huafenmiman:
   description: 每层受到伤害减少15% 每回合结束时叠加一层 最多3层
 mark_longlinjia:
   name: 龙鳞甲【🛡️】
-  description: 反弹受到伤害的50%
+  description: 反弹特攻伤害50% 持续三回合
