--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -127,3 +127,6 @@ mark_ability_yeji:
 mark_ability_lianji:
   name: 连击
   description: 使连击技能连击数+1
+mark_ability_shihua:
+  name: 石化
+  description: 对手石化时自身暴击率增加10%
