feat(netpet): 伊露辛

--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -130,3 +130,6 @@ mark_ability_lianji:
 mark_ability_shihua:
   name: 石化
   description: 对手石化时自身暴击率增加10%
+mark_ability_huanxiang:
+  name: 幻想
+  description: 具有幻想时受到伤害减少10%
