--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -309,7 +309,7 @@ mark_mianyiyichang:
   description: 免疫异常
 mark_xinzhiyinji:
   name: 心之印记
-  description: ''
+  description: 使特定的技能 触发额外的效果
 mark_xuehongyinji:
   name: 血红印记
   description: 视为心之印记且不消耗
@@ -408,7 +408,7 @@ mark_xukongtizhi:
   description: 增加{{mark.stack}}%闪避率 成功闪避则消耗所有虚空体质并使自身获得虚空感应
 mark_xukongganying:
   name: 虚空感应
-  description: ''
+  description: 使特定的技能 触发额外的效果
 mark_yitelingyu:
   name: 伊特领域
   description: 提高自身10%暴击率
@@ -574,3 +574,15 @@ mark_xudian:
 mark_jingshencuoluan:
   name: 精神错乱
   description: 自身承受25%的自损伤害
+mark_huanxiang:
+  name: 幻想
+  description: 使特定的技能 触发额外的效果
+mark_zhenshihuanxiang:
+  name: 真实幻想
+  description: 使幻想不会被技能的效果消耗
+mark_wanan:
+  name: 晚安
+  description: 每回合恢复40点体力 受击时消耗自身并获得会心
+mark_huixin:
+  name: 会心
+  description: 下一次使用非属性类技能必定暴击
