--- a/locales/zh-CN/skill.yaml
+++ b/locales/zh-CN/skill.yaml
@@ -1822,3 +1822,54 @@ skill_zhimingzhiqian:
 skill_duomingzhiqian:
   name: 夺命之钳
   description: 对手具有精神错乱且害怕时威力2倍
+skill_caita:
+  name: 踩踏
+  description: 5%弱化对手物防1级
+skill_touzhi:
+  name: 投掷
+  description: 5%弱化对手特防1级
+skill_jianding:
+  name: 坚定
+  description: 强化自身物攻1级
+skill_huanxiangshijie:
+  name: 幻想世界
+  description: 使自身获得幻想
+skill_huabing:
+  name: 化冰
+  description: 消耗幻想连击2次
+skill_huanxiangzhiying:
+  name: 幻想之影
+  description: 消耗幻想强化自身特攻1级
+skill_huaxue:
+  name: 化雪
+  description: 消耗幻想使对手冻伤
+skill_wanan:
+  name: 晚安
+  description: 使自身获得晚安
+skill_huanxiangzhixing:
+  name: 幻想之形
+  description: 【90】消耗幻想使技能必中
+skill_xinsuo:
+  name: 心锁
+  description: 【95】使自身获得反弹
+skill_baobing:
+  name: 爆冰
+  description: 暴击时恢复20点怒气
+skill_huanxiangzhinian:
+  name: 幻想之念
+  description: 消耗幻想强化自身物防1级
+skill_zhenjiabinglengjiang:
+  name: 真假冰棱镜
+  description: <font color=#93E312>必中</font> 使自身获得幻想 真实幻想
+skill_buyi:
+  name: 不移
+  description: 复制自身物攻强化为特攻强化
+skill_taobei:
+  name: 逃避
+  description: 【90】使自身获得逃避
+skill_huawu:
+  name: 化雾
+  description: 消耗幻想连击4~5次
+skill_huanxiangzhiling:
+  name: 幻想之灵
+  description: 消耗幻想强化自身特防1级
