--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -283,3 +283,9 @@ pet_sanyanxie:
 pet_sanyanshixie:
   name: 三眼石蝎
   description: 习惯了他人的厌弃 三眼石蝎躲入黑暗的地下 只有在听到音乐时才现身
+pet_yilu:
+  name: 伊露
+  description: 伊露生长在茫茫无际的冰原上 喜欢用幻想去丰富自己的精神世界
+pet_yiluxin:
+  name: 伊露辛
+  description: 伊露辛在战斗中 能够将对手纳入它的幻想世界 受制其中
