--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -142,3 +142,6 @@ mark_ability_yingyan:
 mark_ability_yuren:
   name: 羽刃
   description: 羽突类技能额外造成40点固伤
+mark_ability_shiguang:
+  name: 时光
+  description: 使用必杀技使自身获得时光重生
