--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -313,3 +313,9 @@ pet_taimu:
 pet_taimuer:
   name: 泰姆尔
   description: 泰姆尔已经是羽冠之岛公认的报时精灵 它被认为是没有误差的
+pet_niuniu:
+  name: 牛牛
+  description: 牛牛经常被山上掉下的石头砸到脑袋 它很费解石头为什么往下掉呢？
+pet_niudun:
+  name: 牛顿
+  description: 终于有一天 长大的牛牛明白了地心引力的道理 激发了强大的潜能
