--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -631,3 +631,9 @@ mark_shiguangchongsheng:
 mark_yuecuoyueyong:
   name: 越挫越勇
   description: 体力＜75%时伤害提升30% ＜50%时提升50% ＜25%时提升70%
+mark_huohuanzhixin:
+  name: 火环之心
+  description: 每个使自身造成伤害增加10% 最多6个
+mark_zhenkongzhixin:
+  name: 真空之心
+  description: ''
