--- a/locales/zh-CN/skill.yaml
+++ b/locales/zh-CN/skill.yaml
@@ -2113,3 +2113,39 @@ skill_zuli:
 skill_jiancipifu:
   name: 尖刺皮肤
   description: 使自身获得反弹
+skill_huoyanzhihuan:
+  name: 火焰之环
+  description: 使自身获得3个火环之心
+skill_huoyanzhizhua:
+  name: 火焰之爪
+  description: 清空火环之心 每个增加15点威力
+skill_lieyanzhihuan:
+  name: 烈焰之环
+  description: 使自身获得2个火环之心
+skill_lieyanzhizhua:
+  name: 烈焰之爪
+  description: 清空火环之心 每个增加15点威力
+skill_jisuhuohuan:
+  name: 极速火环
+  description: 先制+1
+skill_heiyanzhihuan:
+  name: 黑焰之环
+  description: 使自身获得1个火环之心
+skill_heiyanzhizhua:
+  name: 黑焰之爪
+  description: 清空火环之心 每个增加15点威力
+skill_heimeiguizhihuo:
+  name: 黑玫瑰之火
+  description: 必中 20%弱化对手速度1级
+skill_zhenkongzhihuan:
+  name: 真空之环
+  description: 使自身获得真空之心
+skill_zhenkongzhizhua:
+  name: 真空之爪
+  description: 具有真空之心时必中
+skill_huohuanzhili:
+  name: 火环之力
+  description: 强化自身双攻1级
+skill_zhenkongsuzhao:
+  name: 真空速爪
+  description: 先制+1
