--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -334,3 +334,9 @@ pet_dakeer:
 pet_dakelaer:
   name: 达克拉尔
   description: 达克拉尔进化出了黑色的恶魔羽翼 更加快如闪电
+pet_aixi:
+  name: 艾希
+  description: 能源之树的底座还有着唯一的光芒艾希从这微光中诞生 只有在日光最烈的时候才会出现
+pet_ailixisi:
+  name: 艾丽希斯
+  description: 艾丽希斯在漫长的光阴中一直守护着能源之树 它几乎忘记自己是谁
