--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -1,6 +1,3 @@
-mark_emblem_chaoshui:
-  name: 潮水纹章
-  description: 使潮水技能使对手中溺水的几率提升10%
 mark_emblem_zhuiji:
   name: 追击
   description: 使弱点记号换场继承
@@ -67,7 +64,6 @@ mark_emblem_zhenjiu:
 mark_emblem_ganying:
   name: 感应
   description: 使希捷对手每次技能命中自身时也可以为自身增加5层虚空体质
-# 伊特系列徽章
 mark_emblem_zhongji:
   name: 重击
   description: 使重击技能造成的伤害增加35%
@@ -149,6 +145,12 @@ mark_emblem_xianzhi:
 mark_emblem_zhongxin:
   name: 重心
   description: 使绊倒技能无效
-mark_emblem_huoxinwenzhang:
-  name: 火心纹章
+mark_emblem_huoxin:
+  name: 火心
   description: 使达达火环之心的最大叠加数增加4
+mark_emblem_chaoshui:
+  name: 潮水
+  description: 使潮水技能使对手中溺水的几率提升10%
+mark_emblem_guangwu:
+  name: 光武
+  description: 减少5点光系技能的怒气消耗
