fix(balance):  Add effect to reduce Light Climax skill rage cost by 5
Introduces a new effect and mark for reducing rage cost by 5 when using Light element Climax skills. Also updates the description of 光武神灵通 to reflect the new effect.

--- a/locales/zh-CN/skill.yaml
+++ b/locales/zh-CN/skill.yaml
@@ -2184,7 +2184,7 @@ skill_guangyuandan:
   description: 附加50点固伤
 skill_guangwushenlingtong:
   name: 光武神灵通
-  description: <font color=#93E312>必中</font> 吸收对手10点怒气并恢复自身5点怒气
+  description: <font color=#93E312>必中</font> 吸收对手15点怒气
 skill_shenguangliechong:
   name: 神光烈冲
   description: 附加55点固伤
